--- a/src/calibre/gui2/preferences/look_feel.ui
+++ b/src/calibre/gui2/preferences/look_feel.ui
@@ -1122,6 +1122,17 @@ using the mouse.&lt;/p&gt;</string>
          </property>
         </widget>
        </item>
+       <item row="15" column="0" colspan="2">
+        <widget class="QLabel">
+         <property name="styleSheet">
+          <string notr="true">margin-left: 1.5em</string>
+         </property>
+         <property name="text">
+          <string>&lt;p&gt;If you check this box then you probably want to define the
+keyboard shortcut 'Tag browser / Give the tag browser keyboard focus'&lt;/p&gt;</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
      <widget class="QWidget" name="cover_browser_tab">
