--- a/src/calibre/gui2/preferences/look_feel.ui
+++ b/src/calibre/gui2/preferences/look_feel.ui
@@ -1129,7 +1129,7 @@ using the mouse.&lt;/p&gt;</string>
          </property>
          <property name="text">
           <string>&lt;p&gt;If you enable this option then you should set the
-keyboard shortcut 'Tag browser-&gt;Give the tag browser keyboard focus'&lt;/p&gt;</string>
+keyboard shortcut 'Tag browser-&gt;Give the Tag browser keyboard focus'&lt;/p&gt;</string>
          </property>
         </widget>
        </item>
