--- a/src/calibre/gui2/preferences/look_feel.ui
+++ b/src/calibre/gui2/preferences/look_feel.ui
@@ -1111,7 +1111,7 @@ see the counts by hovering your mouse over any item.</string>
        <item row="14" column="0" colspan="2">
         <widget class="QCheckBox" name="opt_tag_browser_allow_keyboard_focus">
          <property name="text">
-          <string>Allow the Tag browser to have keyboard focus (needs restart)</string>
+          <string>Allow the Tag browser to have keyboard focus</string>
          </property>
          <property name="toolTip">
           <string>&lt;p&gt;When checked, the Tag browser can get keyboard focus, allowing
