--- a/src/calibre/gui2/preferences/look_feel.ui
+++ b/src/calibre/gui2/preferences/look_feel.ui
@@ -1107,9 +1107,6 @@ see the counts by hovering your mouse over any item.</string>
        </item>
        <item row="14" column="0" colspan="2">
         <widget class="QCheckBox" name="opt_tag_browser_allow_keyboard_focus">
-         <property name="text">
-          <string>Allow the Tag browser to have keyboard focus</string>
-         </property>
          <property name="toolTip">
           <string>&lt;p&gt;When checked, the Tag browser can get keyboard focus, allowing
 use of the keyboard to navigate the tree using the arrow keys. The RETURN key simulates
@@ -1117,16 +1114,21 @@ a click on the selected item. The keyboard shortcut 'Tag browser /
 Give the Tag browser keyboard focus' changes the keyboard focus without
 using the mouse.&lt;/p&gt;</string>
          </property>
+         <property name="text">
+          <string>Allow the Tag browser to have keyboard focus</string>
+         </property>
         </widget>
        </item>
        <item row="15" column="0" colspan="2">
-        <widget class="QLabel">
+        <widget class="QLabel" name="tb_focus_label">
          <property name="styleSheet">
           <string notr="true">margin-left: 1.5em</string>
          </property>
          <property name="text">
-          <string>&lt;p&gt;If you enable this option then you should set the
-keyboard shortcut 'Tag browser-&gt;Give the Tag browser keyboard focus'&lt;/p&gt;</string>
+          <string>&lt;p style=&quot;text-indent: 2em; font-size:smaller&quot;&gt;If you enable this option then you should set a keyboard shortcut to focus the Tag browser under &lt;code&gt;Preferences-&amp;gt;Shortcuts-&amp;gt;Tag browser-&amp;gt;Give the Tag browser keyboard focus&lt;/code&gt;</string>
+         </property>
+         <property name="wordWrap">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
@@ -1390,12 +1392,28 @@ column being examined (the left-hand pane)</string>
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>75</x>
-     <y>102</y>
+     <x>86</x>
+     <y>49</y>
     </hint>
     <hint type="destinationlabel">
-     <x>289</x>
-     <y>118</y>
+     <x>101</x>
+     <y>51</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>opt_tag_browser_allow_keyboard_focus</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>tb_focus_label</receiver>
+   <slot>setVisible(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>275</x>
+     <y>528</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>358</x>
+     <y>555</y>
     </hint>
    </hints>
   </connection>
