--- a/manual/templates/layout.html
+++ b/manual/templates/layout.html
@@ -159,19 +159,16 @@
 })();
 </script>
 <!-- End Quantcast Choice. Consent Manager Tag v2.0 (for TCF 2.0) -->
-<script data-cfasync="false" type="text/javascript">                                                                                          
-  var freestar = freestar || {};                                                                                                              
-  freestar.hitTime = Date.now();                                                                                                              
-  freestar.queue = freestar.queue || [];                                                                                                      
-  freestar.config = freestar.config || {};                                                                                                    
-  freestar.debug = window.location.search.indexOf('fsdebug') === -1 ? false : true;                                                           
-  freestar.config.enabled_slots = [];                                                                                                         
-  !function(a,b){var                                                                                                                          
-c=b.getElementsByTagName("script")[0],d=b.createElement("script"),e="https://a.pub.network/manual-calibre-ebook-com";e+=freestar.debug?"/qa/pu
-bfig.min.js":"/pubfig.min.js",d.async=!0,d.src=e,c.parentNode.insertBefore(d,c)}(window,document);                                            
-  freestar.initCallback = function () { (freestar.config.enabled_slots.length === 0) ? freestar.initCallbackCalled = false :                  
-freestar.newAdSlots(freestar.config.enabled_slots) }                                                                                          
-</script>                 
+<script data-cfasync="false" type="text/javascript">
+  var freestar = freestar || {};
+  freestar.hitTime = Date.now();
+  freestar.queue = freestar.queue || [];
+  freestar.config = freestar.config || {};
+  freestar.debug = window.location.search.indexOf('fsdebug') === -1 ? false : true;
+  freestar.config.enabled_slots = [];
+  !function(a,b){var c=b.getElementsByTagName("script")[0],d=b.createElement("script"),e="https://a.pub.network/manual-calibre-ebook-com";e+=freestar.debug?"/qa/pubfig.min.js":"/pubfig.min.js",d.async=!0,d.src=e,c.parentNode.insertBefore(d,c)}(window,document);
+  freestar.initCallback = function () { (freestar.config.enabled_slots.length === 0) ? freestar.initCallbackCalled = false : freestar.newAdSlots(freestar.config.enabled_slots) }
+</script>
 {% endblock %}
 
 {%- block relbar1 %}{{ relbar() }}{% endblock %}
@@ -187,11 +184,11 @@ freestar.newAdSlots(freestar.config.enabled_slots) }
       {% if not embedded %}
           <div class="body" role="main">
             <div id="ad-container" style="text-align:center">
-                <div align="center" data-freestar-ad="__970x90 __336x280" id="manualcalibre-ebook_leaderboard_atf">    
-                    <script data-cfasync="false" type="text/javascript"> 
-                        freestar.config.enabled_slots.push({ placementName: "manualcalibre-ebook_leaderboard_atf", slotId: "manualcalibre-ebook_leaderboard_atf"});
+                <div align="center" data-freestar-ad="__970x90 __336x280" id="manualcalibre-ebook_leaderboard_atf">
+                    <script data-cfasync="false" type="text/javascript">
+                        freestar.config.enabled_slots.push({ placementName: "manualcalibre-ebook_leaderboard_atf", slotId: "manualcalibre-ebook_leaderboard_atf" });
                     </script>
-                </div>     
+                </div>
             </div>
         {% endif %}
             {% block body %} {% endblock %}
