Top bar should not be displayed in narrow mode

--- a/manual/resources/custom.css
+++ b/manual/resources/custom.css
@@ -10,6 +10,7 @@
         padding-top: 0;
         padding-bottom: 0;
     }
+    div.related { display: none; }
 }
 
 @media screen and (min-width: 876px) {
