--- a/src/calibre/gui2/convert/look_and_feel.ui
+++ b/src/calibre/gui2/convert/look_and_feel.ui
@@ -240,7 +240,7 @@
        <item row="5" column="0" colspan="2">
         <widget class="QCheckBox" name="opt_unsmarten_punctuation">
          <property name="text">
-          <string>&amp;UnSmarten punctuation</string>
+          <string>&amp;Unsmarten punctuation</string>
          </property>
         </widget>
        </item>
