--- a/src/calibre/gui2/device_drivers/configwidget.ui
+++ b/src/calibre/gui2/device_drivers/configwidget.ui
@@ -86,7 +86,7 @@
    <item row="2" column="0">
     <widget class="QCheckBox" name="opt_use_subdirs">
      <property name="toolTip">
-      <string>If checked, books are placed into sub-directories based on their metadata on the device. If unchecked, books are all put into the top level directory.</string>
+      <string>If checked, books are placed into sub-folders based on their metadata on the device. If unchecked, books are all put into the top level directory.</string>
      </property>
      <property name="text">
       <string>Use sub-directories</string>
