Enhancement: add 'breakpoints' to the template tester. Includes adding line numbers. Also improved syntax highlighting. This will undoubtably change again, but I want to get it out for testing.

--- a/src/calibre/gui2/dialogs/template_dialog.ui
+++ b/src/calibre/gui2/dialogs/template_dialog.ui
@@ -179,12 +179,154 @@
             <cstring>textbox</cstring>
            </property>
            <property name="alignment">
-            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
            </property>
           </widget>
          </item>
+         <item row="1" column="1" colspan="3">
+          <layout class="QHBoxLayout">
+           <item>
+            <spacer>
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>1</width>
+               <height>0</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item>
+            <widget class="QCheckBox" name="break_box">
+             <property name="text">
+              <string>Enable &amp;breakpoints</string>
+             </property>
+             <property name="toolTip">
+              <string>&lt;p&gt;If checked, the template evaluator will stop when it
+evaluates an expression on a double-clicked line number, opening a dialog showing
+you the value as well as all the local variables&lt;/p&gt;</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QFrame" name="frame">
+             <property name="frameShape">
+              <enum>QFrame::VLine</enum>
+             </property>
+             <property name="frameShadow">
+              <enum>QFrame::Raised</enum>
+             </property>
+             <property name="lineWidth">
+              <number>3</number>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="go_button">
+             <property name="text">
+              <string>&amp;Go</string>
+             </property>
+             <property name="icon">
+              <iconset resource="../../../../resources/images.qrc">
+               <normaloff>:/images/sync-right.png</normaloff>:/images/sync-right.png</iconset>
+             </property>
+             <property name="toolTip">
+              <string>If 'Enable breakpoints' is checked then click this button to run your template</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QFrame" name="frame">
+             <property name="frameShape">
+              <enum>QFrame::VLine</enum>
+             </property>
+             <property name="frameShadow">
+              <enum>QFrame::Raised</enum>
+             </property>
+             <property name="lineWidth">
+              <number>3</number>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="breakpoint_line_box_label">
+             <property name="text">
+              <string>&amp;Line:</string>
+             </property>
+             <property name="buddy">
+              <cstring>breakpoint_line_box</cstring>
+             </property>
+             <property name="toolTip">
+              <string>Line number to toggle</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="breakpoint_line_box">
+             <property name="toolTip">
+              <string>Line number to toggle</string>
+             </property>
+             <property name="minimum">
+              <number>1</number>
+             </property>
+             <property name="maximum">
+              <number>999</number>
+             </property>
+            <property name="value">
+             <number>1</number>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignRight</set>
+            </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="toggle_button">
+             <property name="text">
+              <string>&amp;Toggle</string>
+             </property>
+             <property name="icon">
+              <iconset resource="../../../../resources/images.qrc">
+               <normaloff>:/images/swap.png</normaloff>:/images/swap.png</iconset>
+             </property>
+             <property name="toolTip">
+              <string>Toggle the breakpoint on the line number in the box</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QFrame" name="frame">
+             <property name="frameShape">
+              <enum>QFrame::VLine</enum>
+             </property>
+             <property name="frameShadow">
+              <enum>QFrame::Raised</enum>
+             </property>
+             <property name="lineWidth">
+              <number>3</number>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="remove_all_button">
+             <property name="text">
+              <string>&amp;Remove all</string>
+             </property>
+             <property name="icon">
+              <iconset resource="../../../../resources/images.qrc">
+               <normaloff>:/images/list_remove.png</normaloff>:/images/list_remove.png</iconset>
+             </property>
+             <property name="toolTip">
+              <string>Remove all breakpoints</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
          <item row="2" column="0" colspan="4">
-          <widget class="QPlainTextEdit" name="textbox">
+          <widget class="CodeEditor" name="textbox">
            <property name="toolTip">
             <string>The template program text</string>
            </property>
@@ -210,7 +352,7 @@
            </property>
           </widget>
          </item>
-         <item row="5" column="0">
+         <item row="7" column="0">
           <widget class="QLabel">
            <property name="text">
             <string>Template value:</string>
@@ -223,7 +365,7 @@
            </property>
           </widget>
          </item>
-         <item row="6" column="0" colspan="4">
+         <item row="8" column="0" colspan="4">
           <widget class="QTableWidget" name="template_value">
           </widget>
          </item>
@@ -376,11 +518,7 @@
            </property>
           </widget>
          </item>
-         <item row="19" column="1">
-          <layout class="BoxLayout" name="user_layout_9" dir="TopToBottom">
-          </layout>
-         </item>
-         <item row="20" column="0" colspan="2">
+         <item row="24" column="0" colspan="2">
           <layout class="QHBoxLayout">
            <item>
             <widget class="QLabel" name="font_name_label">
@@ -418,7 +556,7 @@
            </item>
           </layout>
          </item>
-         <item row="20" column="3">
+         <item row="24" column="3">
           <widget class="QDialogButtonBox" name="buttonBox">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
@@ -428,14 +566,14 @@
            </property>
           </widget>
          </item>
-         <item row="21" column="0" colspan="4">
+         <item row="25" column="0" colspan="4">
           <widget class="QFrame">
            <property name="frameShape">
             <enum>QFrame::HLine</enum>
            </property>
           </widget>
          </item>
-         <item row="22" column="0" colspan="4">
+         <item row="30" column="0" colspan="4">
           <layout class="QGridLayout">
            <item row="0" column="0" colspan="2">
             <widget class="QLabel" name="label">
@@ -557,6 +695,11 @@
    <class>BoxLayout</class>
    <extends>QBoxLayout</extends>
    <header>calibre/gui2/dialogs/template_dialog_box_layout.h</header>
+  </customwidget>
+  <customwidget>
+   <class>CodeEditor</class>
+   <extends>QPlainTextEdit</extends>
+   <header>calibre/gui2/dialogs/template_dialog_code_widget.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
