--- a/src/calibre/gui2/dialogs/template_dialog.ui
+++ b/src/calibre/gui2/dialogs/template_dialog.ui
@@ -170,21 +170,21 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="0">
-          <widget class="QLabel">
-           <property name="text">
-            <string>T&amp;emplate:</string>
-           </property>
-           <property name="buddy">
-            <cstring>textbox</cstring>
-           </property>
-           <property name="alignment">
-            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1" colspan="3">
+         <item row="1" column="0" colspan="4">
           <layout class="QHBoxLayout">
+           <item>
+            <widget class="QLabel">
+             <property name="text">
+              <string>T&amp;emplate:</string>
+             </property>
+             <property name="buddy">
+              <cstring>textbox</cstring>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+             </property>
+            </widget>
+           </item>
            <item>
             <spacer>
              <property name="orientation">
@@ -231,6 +231,9 @@ you the value as well as all the local variables&lt;/p&gt;</string>
              <property name="icon">
               <iconset resource="../../../../resources/images.qrc">
                <normaloff>:/images/sync-right.png</normaloff>:/images/sync-right.png</iconset>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">padding: 5; padding-left: 1;</string>
              </property>
              <property name="toolTip">
               <string>If 'Enable breakpoints' is checked then click this button to run your template</string>
@@ -287,6 +290,9 @@ you the value as well as all the local variables&lt;/p&gt;</string>
              <property name="text">
               <string>&amp;Toggle</string>
              </property>
+             <property name="styleSheet">
+              <string notr="true">padding: 5; padding-left: 1;</string>
+             </property>
              <property name="icon">
               <iconset resource="../../../../resources/images.qrc">
                <normaloff>:/images/swap.png</normaloff>:/images/swap.png</iconset>
@@ -314,12 +320,32 @@ you the value as well as all the local variables&lt;/p&gt;</string>
              <property name="text">
               <string>&amp;Remove all</string>
              </property>
+             <property name="styleSheet">
+              <string notr="true">padding: 5; padding-left: 1;</string>
+             </property>
              <property name="icon">
               <iconset resource="../../../../resources/images.qrc">
                <normaloff>:/images/list_remove.png</normaloff>:/images/list_remove.png</iconset>
              </property>
              <property name="toolTip">
               <string>Remove all breakpoints</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="set_all_button">
+             <property name="text">
+              <string>&amp;Set all</string>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">padding: 5; padding-left: 1;</string>
+             </property>
+             <property name="icon">
+              <iconset resource="../../../../resources/images.qrc">
+               <normaloff>:/images/plus.png</normaloff>:/images/plus.png</iconset>
+             </property>
+             <property name="toolTip">
+              <string>Set breakpoint on every line</string>
              </property>
             </widget>
            </item>
@@ -590,10 +616,23 @@ you the value as well as all the local variables&lt;/p&gt;</string>
            <item>
             <widget class="QToolButton" name="save_button">
              <property name="text">
-              <string>&amp;Save</string>
+              <string>Sa&amp;ve</string>
              </property>
              <property name="toolTip">
               <string>Save the template in a file</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QFrame" name="frame">
+             <property name="frameShape">
+              <enum>QFrame::VLine</enum>
+             </property>
+             <property name="frameShadow">
+              <enum>QFrame::Raised</enum>
+             </property>
+             <property name="lineWidth">
+              <number>3</number>
              </property>
             </widget>
            </item>
